--- a/Home/styles.css
+++ b/Home/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("https://www.surfertoday.com/images/stories/bodysurfing4.jpg");
+    background-image:url("11876835.jpg");
     background-repeat:no-repeat;
     background-size:100% 1000px;
     /*width: 100px;*/
@@ -28,10 +28,11 @@ h1{
 
 .nav-tabs, .nav-pills {
     text-align:center;
+    font-size: 16px;
 }
 #header{
      text-shadow: 2px 2px blue;
-     opacity: 0.5;
+     opacity: 0.9;
 }
 
 #motto{
@@ -39,7 +40,7 @@ h1{
     text-align: center;
     font-weight:bold;
     text-shadow: 2px 2px blue;
-    opacity: 0.5;
+    opacity: 0.9;
 }
 .jumbotron {
    background: rgba(65, 105, 225, 0.3); 
@@ -47,10 +48,10 @@ h1{
 #Header{
      color:#6CEC14;
      text-shadow: 2px 2px blue;
-     opacity: 0.5;
+     opacity: 0.9;
 }
 #Content{
-     color: rgba(216, 236, 20, 0.9);
+     color: rgba(216, 236, 20, 0.95);
      text-shadow: 2px 2px blue;
 }
 .form-control {
@@ -62,21 +63,29 @@ label{
     text-shadow: 2px 2px white;
      opacity: 0.5;
 }
+.marley{
+    font-weight:bold;
+}
+.container{
+    text-align:center;
+}
 
-
-
-
+#Gif{
+    display: block;
+    margin: auto;
+    width: 450px;
+    height:415px;
+}
 /******************
  Calendar Widget ***
 ******************/
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
 *{margin:0;padding:0;}
 
 
 #calendar{
   width:358px;
-  margin:0 auto;
+  margin:5 ;
   margin-top:2%;
   margin-bottom:2%;
   border-radius:5px;
@@ -86,7 +95,7 @@ label{
   box-shadow:0 0 50px -14px rgba(0,0,0,.8);
 }
 
-#calendar h1{
+#calendar {
   background:#ee3333;
   border-radius:5px 5px 0 0;
   padding:20px;
@@ -102,17 +111,17 @@ label{
 #calendar table{
   border-top:1px solid #ddd;
   border-left:1px solid #ddd;
-  border-spacing:0;
-  border-radius:0 0 5px 5px;
+  border-spacing:2;
+  border-radius:5 35 15px 15px;
 }
 
 #calendar td{
   width:38px;
   height:38px;
   background:#eee;
-  border-right:1px solid #ddd;
-  border-bottom:1px solid #ddd;
-  padding:6px;
+  border-right:.9px solid #ddd;
+  border-bottom:9px solid #ddd;
+  
   cursor:pointer;
   transition:background .3s;
   -webkit-transition:background .3s;
@@ -122,7 +131,7 @@ label{
   background:#ddd;
 }
 
-#calendar .lastmonth,#calendar .nextmonth,#calendar .nextmonth ~ *{
+#calendar .lastmonth,#calendar .nextmonth,#calendar .nextmonth  {
   background:#fff;
   color:#999;
 }
