--- a/Home/styles.css
+++ b/Home/styles.css
@@ -1,7 +1,7 @@
 body{
     background-image:url("11876835.jpg");
     background-repeat:no-repeat;
-    background-size:100% 1000px;
+    background-size:100% 1750px;
     /*width: 100px;*/
     
 }
@@ -14,6 +14,12 @@ h1{
     opacity: 0.5;
 }
 
+h2{
+    color:#6CEC14;
+    text-align: center;
+    font-weight:bold;
+    opacity: 0.5;
+}
 
 .row{
     background-color: #6CEC14;
@@ -76,76 +82,7 @@ label{
     width: 450px;
     height:415px;
 }
-/******************
- Calendar Widget ***
-******************/
-
-*{margin:0;padding:0;}
-
-
-#calendar{
-  width:358px;
-  margin:5 ;
-  margin-top:2%;
-  margin-bottom:2%;
-  border-radius:5px;
-  font-family:'Open Sans',sans-serif;
-  text-align:center;
-  color:#555;
-  box-shadow:0 0 50px -14px rgba(0,0,0,.8);
+    
+#message{
+    font-weight:bold;
 }
-
-#calendar {
-  background:#ee3333;
-  border-radius:5px 5px 0 0;
-  padding:20px;
-  font-size:140%;
-  font-weight:300;
-  text-transform:uppercase;
-  letter-spacing:1px;
-  color:#fff;
-  cursor:default;
-  text-shadow:0 0 10px rgba(0,0,0,.8);
-}
-
-#calendar table{
-  border-top:1px solid #ddd;
-  border-left:1px solid #ddd;
-  border-spacing:2;
-  border-radius:5 35 15px 15px;
-}
-
-#calendar td{
-  width:38px;
-  height:38px;
-  background:#eee;
-  border-right:.9px solid #ddd;
-  border-bottom:9px solid #ddd;
-  
-  cursor:pointer;
-  transition:background .3s;
-  -webkit-transition:background .3s;
-}
-
-#calendar td:hover:not(.current){
-  background:#ddd;
-}
-
-#calendar .lastmonth,#calendar .nextmonth,#calendar .nextmonth  {
-  background:#fff;
-  color:#999;
-}
-
-#calendar .current{
-  background:#ee3333;
-  font-weight:700;
-  color:#fff;
-  text-shadow:0 0 10px rgba(0,0,0,.5);
-}
-
-#calendar .hastask{
-  font-weight:700;
-}
-
-#calendar tr:last-of-type td:first-of-type{border-radius:0 0 0 5px;}
-#calendar tr:last-of-type td:last-of-type{border-radius:0 0 5px 0;}
