--- a/Home/styles.css
+++ b/Home/styles.css
@@ -8,21 +8,21 @@ body{
 
 h1{
     
-    color:#6CEC14;
+    color:#22c522;
     text-align: center;
     font-weight:bold;
-    opacity: 0.5;
+    text-shadow: 2px 2px blue;
 }
 
 h2{
-    color:#6CEC14;
+    color:#22c522;
     text-align: center;
     font-weight:bold;
-    opacity: 0.5;
+    text-shadow: 2px 2px blue;
 }
 
 .row{
-    background-color: #6CEC14;
+    background-color: #22c522;
 }
 
 .nav-tabs > li, .nav-pills > li {
@@ -38,11 +38,11 @@ h2{
 }
 #header{
      text-shadow: 2px 2px blue;
-     opacity: 0.9;
+     
 }
 
 #motto{
-    color:#6CEC14;
+    color:#22c522;
     text-align: center;
     font-weight:bold;
     text-shadow: 2px 2px blue;
@@ -52,9 +52,9 @@ h2{
    background: rgba(65, 105, 225, 0.3); 
 }
 #Header{
-     color:#6CEC14;
+     color:#22c522;
      text-shadow: 2px 2px blue;
-     opacity: 0.9;
+     
 }
 #Content{
      color: rgba(216, 236, 20, 0.95);
@@ -85,4 +85,25 @@ label{
     
 #message{
     font-weight:bold;
+}
+html,body{height:100%;}
+
+.carousel,.item,.active{height:100%;}
+
+.carousel-inner{height:100%;}
+
+input, select, textarea{
+    color: white;
+}
+
+.item{
+    width:100%;
+    height: 100%;
+}
+
+
+.wall-backdrop {
+    background-color:white;
+    height: 500px;
+    width:100%;
 }
