--- a/Upcoming_Events/events.css
+++ b/Upcoming_Events/events.css
@@ -8,15 +8,14 @@ body{
 
 h1{
     
-    color:#6CEC14;
+    color:#22c522;
     text-align: center;
     font-weight:bold;
-    opacity: 0.5;
 }
 
 
 .row{
-    background-color: #6CEC14;
+    background-color: #22c522;
 }
 
 .nav-tabs > li, .nav-pills > li {
@@ -31,23 +30,23 @@ h1{
 }
 #header{
      text-shadow: 2px 2px blue;
-     opacity: 0.5;
+     
 }
 
 #motto{
-    color:#6CEC14;
+    color:#22c522;
     text-align: center;
     font-weight:bold;
     text-shadow: 2px 2px blue;
-    opacity: 0.5;
+    
 }
 .jumbotron {
    background: rgba(65, 105, 225, 0.3); 
 }
 #Header{
-     color:#6CEC14;
+     color:#22c522;
      text-shadow: 2px 2px blue;
-     opacity: 0.5;
+     
 }
 #Content{
      color: rgba(216, 236, 20, 0.9);
@@ -60,15 +59,26 @@ h1{
 
 label{
     text-shadow: 2px 2px white;
-     opacity: 0.5;
+     ;
 }
 input:focus, select, textarea{
-    color: #6CEC14;
+    color: #228B22;
 }
 
 textarea:focus, input:focus {
-    color: #6CEC14 ;
+    color: #228B22 ;
 }
 
+.classy{
+    text-align:center;  
+    color:black;
+}
+.normals{
+     color:#22c522;
+    text-align: center;
+    font-weight:bold;
+}
 
-
+margin{
+     left:250px;
+}
