--- a/Home/styles.css
+++ b/Home/styles.css
@@ -1,109 +1,147 @@
-body{
-    background-image:url("11876835.jpg");
-    background-repeat:no-repeat;
-    background-size:100% 1750px;
+body {
+    background-image: url("11876835.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 1750px;
     /*width: 100px;*/
-    
 }
 
-h1{
-    
-    color:#22c522;
+h1 {
+    color: #22c522;
     text-align: center;
-    font-weight:bold;
+    font-weight: bold;
     text-shadow: 2px 2px blue;
 }
 
-h2{
-    color:#22c522;
+h2 {
+    color: #22c522;
     text-align: center;
-    font-weight:bold;
+    font-weight: bold;
     text-shadow: 2px 2px blue;
 }
 
-.row{
+.row {
     background-color: #22c522;
 }
 
-.nav-tabs > li, .nav-pills > li {
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
+.nav-tabs>li,
+.nav-pills>li {
+    float: none;
+    display: inline-block;
+    *display: inline;
+    /* ie7 fix */
+    zoom: 1;
+    /* hasLayout ie7 trigger */
 }
 
-.nav-tabs, .nav-pills {
-    text-align:center;
+.nav-tabs,
+.nav-pills {
+    text-align: center;
     font-size: 16px;
 }
-#header{
-     text-shadow: 2px 2px blue;
-     
+
+#header {
+    text-shadow: 2px 2px blue;
 }
 
-#motto{
-    color:#22c522;
+#motto {
+    color: #22c522;
     text-align: center;
-    font-weight:bold;
+    font-weight: bold;
     text-shadow: 2px 2px blue;
     opacity: 0.9;
 }
+
 .jumbotron {
-   background: rgba(65, 105, 225, 0.3); 
+    background: rgba(65, 105, 225, 0.3);
 }
-#Header{
-     color:#22c522;
-     text-shadow: 2px 2px blue;
-     
+
+#Header {
+    color: #22c522;
+    text-shadow: 2px 2px blue;
 }
-#Content{
-     color: rgba(216, 236, 20, 0.95);
-     text-shadow: 2px 2px blue;
+
+#Content {
+    color: rgba(216, 236, 20, 0.95);
+    text-shadow: 2px 2px blue;
 }
+
 .form-control {
-    background:rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     border: 2px solid white;
 }
 
-label{
+label {
     text-shadow: 2px 2px white;
-     opacity: 0.5;
-}
-.marley{
-    font-weight:bold;
-}
-.container{
-    text-align:center;
+    opacity: 0.5;
 }
 
-#Gif{
+.marley {
+    font-weight: bold;
+}
+
+.container {
+    text-align: center;
+}
+
+#Gif {
     display: block;
     margin: auto;
     width: 450px;
-    height:415px;
-}
-    
-#message{
-    font-weight:bold;
-}
-html,body{height:100%;}
-
-.carousel,.item,.active{height:100%;}
-
-.carousel-inner{height:100%;}
-
-input, select, textarea{
-    color: white;
+    height: 415px;
 }
 
-.item{
-    width:100%;
+#message {
+    font-weight: bold;
+}
+
+html,
+body {
     height: 100%;
 }
 
+.carousel,
+.item,
+.active {
+    height: 100%;
+}
+
+.carousel-inner {
+    height: 100%;
+}
+
+input,
+select,
+textarea {
+    color: white;
+}
+
+.item {
+    width: 100%;
+    height: 750px;
+}
 
 .wall-backdrop {
-    background-color:white;
+    background-color: white;
     height: 500px;
-    width:100%;
+    width: 100%;
+}
+
+#num1 {
+    height: 1000px;
+}
+
+#num2 {
+    height: 1000px;
+}
+.navbar-brand {
+  padding: 0px; /* firefox bug fix */
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px; /* firefox bug fix */
+  width: auto;
+}
+.navbar-brand {
+  background: url(http://disputebills.com/site/uploads/2015/10/dispute.png) center / contain no-repeat;
+  width: 200px;
 }
