--- a/Upcoming_Events/events.css
+++ b/Upcoming_Events/events.css
@@ -7,15 +7,9 @@ body{
 }
 
 h1{
-    
     color:#22c522;
     text-align: center;
     font-weight:bold;
-}
-
-
-.row{
-    background-color: #22c522;
 }
 
 .nav-tabs > li, .nav-pills > li {
@@ -27,7 +21,13 @@ h1{
 
 .nav-tabs, .nav-pills {
     text-align:center;
+    
 }
+
+#theFirstone{
+    background-color:#22c522
+}
+
 #header{
      text-shadow: 2px 2px blue;
      
@@ -53,8 +53,8 @@ h1{
      text-shadow: 2px 2px blue;
 }
 .form-control {
-    background:rgba(0, 0, 0, 0.2);
-    border: 2px solid white;
+    background:rgba(0, 0, 0, 0.6);
+    border: 2px solid limegreen;
 }
 
 label{
@@ -81,4 +81,16 @@ textarea:focus, input:focus {
 
 margin{
      left:250px;
+}
+.navbar-brand {
+  padding: 0px; /* firefox bug fix */
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px; /* firefox bug fix */
+  width: auto;
+}
+.navbar-brand {
+  background: url(http://disputebills.com/site/uploads/2015/10/dispute.png) center / contain no-repeat;
+  width: 200px;
 }
